fix: Sidebar being too small at phone layout

--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -38,6 +38,7 @@
     z-index: 4;
     height: auto;
     width: 100%;
+    max-width: 100%;
     padding: 1.5rem 1rem;
     flex-direction: row;
     justify-content: space-evenly;
